--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . ",
     "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,7 +22,6 @@
     "react-redux": "^9.1.2",
     "sass": "^1.80.5",
     "vite": "^5.4.10"
-    
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -44,6 +44,5 @@
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0"
-    
   }
 }
